--- a/engineer-edit.html
+++ b/engineer-edit.html
@@ -48,6 +48,7 @@
                 <circle cx="430" cy="160" r="40" stroke="#854111" stroke-width="0" fill="#f58d45" style="opacity:0.4" />
                 <circle cx="140" cy="180" r="40" stroke="#854111" stroke-width="0" fill="#f58d45" style="opacity:0.4" />
                 <circle cx="220" cy="190" r="40" stroke="#854111" stroke-width="0" fill="#f58d45" style="opacity:0.4" />
+                <circle cx="590" cy="240" r="40" stroke="#854111" stroke-width="0" fill="#f58d45" style="opacity:0.4" />
             </svg>
             <!--<img height="100%" width="100%" src="rM392EV.png" class="world"/>-->
 
